--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
-[submodule "src/ncnn"]
-	path = src/ncnn
+[submodule "src/library/ncnn"]
+	path = src/library/ncnn
 	url = https://github.com/Tencent/ncnn.git
-[submodule "src/libwebp"]
-	path = src/libwebp
-	url = https://github.com/webmproject/libwebp.git
+
+[submodule "src/library/stb"]
+	path = src/library/stb
+	url = https://github.com/nothings/stb.git
